# experiment-archiver-rs

./: .gitignore  Cargo.toml  run_integration_tests.sh
exar/: Cargo.toml  README.md  build.rs
exar-cli/: Cargo.toml  README.md
exar-cli/src/: cli.rs  configuration.rs  generic_table.rs  main.rs  statistics.rs  util.rs
exar-cli/src/commands/: configure.rs  init.rs  list_experiments.rs  list_instances.rs  list_runs.rs  list_versions.rs  mod.rs
exar/examples/: memory_throughput.rs
exar/src/: experiment.rs  lib.rs  run.rs  util.rs  variable.rs  version.rs
exar/src/database/: mod.rs  postgres.rs
exar/tests/: integration.rs  run_without_db.rs  showcase.rs
exar/tests/data/: dbschema.sql  example.yaml
exar/tests/scripts/: run_integration_tests.sh  run_postgres_container.sh
src/: experiment.rs  lib.rs  measurement.rs  postgres.rs  runs.rs  util.rs  variables.rs
test_data/: dbschema.sql
tests/: integration.rs
