[package]
name = "exar-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exar = { path = "../exar" }
termion = "2.0"
anyhow = {version = "1", features = [] }
log = "0.4"
tabled = "0.12"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9" }
dirs = "5.0"
rpassword = "7.2"
itertools = "0.11"
statrs = "0.16"