[package]
name = "exar"
version = "0.2.0"
edition = "2021"
authors = ["Pascal Bormann <pascal@pascalbormann.de>"]
description = "Library for storing data from experiment runs in a PostgreSQL database"
readme = "README.md"

[dependencies]
postgres = {version = "0.19.5", features = ["with-chrono-0_4"] }
anyhow = {version = "1", features = [] }
rand = "0.8.5"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
itertools = "0.11.0"
lazy_static = "1.4"
build_id = "0.2.1"
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }

[features]
default = ["yaml"]
yaml = ["serde_yaml"]